# P5

./: .gitignore  LICENSE  README.md  conda-lock.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/actions/setup_env/: action.yaml
.github/workflows/: ci.yaml
assets/: readme.md
notebooks/: demo.ipynb  file_to_json_llm.ipynb
notebooks/utils/: evaluation.py  phenopacket.py  readme.md  report.py
requirements/: environment.yml  instructions_for_charite_conda_block.md  requirements.txt  requirements_scripts.txt  requirements_test.txt
scripts/: PMID_downloader.py  __main__.py  compare_phenopackets.py  create_phenopacket_dataset.py  create_pmid_pkl.py  file_to_phenopacket.py  filter_phenopackets.py  pdf_to_phenopacket.py  pmid_list.txt  pull_git_files.py  readme.md  utils.py
src/P5/scripts/: __main__.py  create_phenopacket_dataset.py  create_pmid_pkl.py  file_to_phenopacket.py  pmid_downloader.py  pull_git_files.py  readme.md
tests/: conftest.py  test_default.py
tests/assets/PMID_ids and PDFs/: pmid_list.txt
tests/assets/scripts/: dummyPMIDs.txt  dummy_pmids.txt  dummy_pmids_no_pmcid.txt  dummy_pmids_with_pmcid.txt
tests/notebooks/utils/: test_evaluation.py  test_phenopacket.py  test_report.py
tests/scripts/: test_PMID_downloader.py  test_compare_helpers.py  test_compare_phenopackets.py  test_create_phenopacket_dataset.py  test_create_pmid_pkl.py  test_file_to_phenopacket.py  test_filter_phenopackets.py  test_pdf_to_phenopacket.py  test_pmid_downloader.py  test_pull_git_files.py  test_utils.py
